syntax="proto3";

option java_package = "com.poker.protocols.login.client";
option java_outer_classname = "RequestLoginProto";

message RequestLogin{
	string uuid  = 1;
	int64  uid   = 2;
}

// protoc_3.5.1 --java_out=./src ./src/com/poker/protocols/login/client/proto/RequestLogin.proto 