// protoc --java_out=./src ./src/com/poker/protocols/server/proto/LoginResponse.proto 
option java_package = "com.poker.protocols.server";
option java_outer_classname = "LoginResponseProto";

message LoginResponse{
	optional int32  uid   = 1;
}